--- a/finalproject/styles/styles.css
+++ b/finalproject/styles/styles.css
@@ -1,37 +1,49 @@
 body {
-    background-image: url(/finalproject/images/basketballbackground.jpg);
+    background-image: url(../images/background2.png);
+    background-repeat: no-repeat;
 }
 
-/***************Grid Container************/
-
-.container {
-    display: grid;
-    grid-template-columns: repeat(2, 2fr);
-    grid-gap: 1.25rem;
+h2 {
+    color: white;
+    text-align: center;
+    font-size: 2rem;
+    font-family: 'Overpass';
+    margin-top: 0;
 }
+
+/****************Header********************/
 
 .header {
-    grid-column-start: 1;
-    grid-column-end: 4;
-    display:grid;
-    grid-template-columns: repeat(5, 1fr);
+    background-color: white;
+    margin-left: .5rem;
+    padding-right: .2rem;
+    padding-left: .2rem;
+    max-width: 100%
 }
 
 .header #nbalogo {
-    grid-column-start: 1;
-    grid-column-end: 3;
     max-width: 10%;
-    margin-left: 1rem;
-
-    
+    margin-left: .25rem;
+    margin-bottom: 0;
 }
+
 .header h1 {
-    grid-column-start: 3;
-    grid-column-end: 10;
     font-family: 'Markazi Text', serif;
-    text-align: left;
+    text-align: center;
     font-size: 3rem;
+    margin-top: 0;
 }
 
 
+/***************Team Lists**************/
+ul {
+    list-style: none;
+}
 
+ul li {
+    padding: 10px;
+}
+
+#westTeams {
+    display: none;
+}
