--- a/finalproject/styles/styles.css
+++ b/finalproject/styles/styles.css
@@ -47,7 +47,7 @@ button {
 
 .header h1 {
     color: white;
-    font-family: 'Markazi Text', serif;
+    font-family: 'Permanent Marker', cursive;
     text-align: center;
     font-size: 4rem;
     margin-top: 0;
