--- a/finalproject/styles/teamsstyle.css
+++ b/finalproject/styles/teamsstyle.css
@@ -40,15 +40,21 @@ a {
     width: 40%;
 }
 
-.container {
+#container {
     width: 100%;
     height: 1500px;
-    margin: auto;
+    
     display: flex;
-    flex-flow: row;
     flex-flow: wrap;
-    margin-left: .5rem;
     align-content: flex-start;
+    align-items: center;
+    justify-items: center;
+    justify-content: center;
+}
+
+#wrapper {
+    margin: auto;
+    width: 100%;
 }
 
 /******************Team Cards****************/
@@ -64,6 +70,7 @@ a {
     margin: 1rem;
     position: relative;
     border-radius: 10%;
+    display: inline-flex;
 }
 
 .front, .back {
@@ -229,13 +236,24 @@ h3 {
 
 p {
     margin: .75rem;
+    padding: .75rem;
     font-size: 1.2rem;
 }
 
-.buckpic {
+.smaller {
     width: 30%;
 }
 
-.heatpic {
+.larger {
     width: 50%;
+}
+
+#searchList {
+    width: 75%;
+    font-size: 1rem;
+    padding: .5rem;
+    margin: 2rem;
+    border-radius: 10px;
+    border: 2px solid #B95915;
+    background-color: rgba(255,255,255,.7);
 }
