--- a/finalproject/styles/teamsstyle.css
+++ b/finalproject/styles/teamsstyle.css
@@ -17,13 +17,45 @@ a {
     margin-left: .5rem;
     padding-right: .2rem;
     padding-left: .2rem;
-    max-width: 100%
+    max-width: 100%;
+    text-align: center;
+    
 }
 
-.header #nbalogo {
-    max-width: 15%;
-    margin-left: .25rem;
-    margin-bottom: 0;
+.nav{
+   display: grid;
+   grid-template-columns: 1fr, 10fr;
+    width: 95%;
+    overflow: hidden;
+    position: relative;
+
+
+}
+.nav #menuLinks {
+    display: none;
+    left: 25%;
+    right: 25%;
+    float: left;
+    margin: auto;
+    grid-column-start: 2;
+    grid-column-end: 11;
+    text-align: center;
+
+}
+
+.nav a {
+    float: left;
+    color: white;
+    padding: 15px;
+    text-decoration: none;
+    font-size: 35px;
+    position: relative;
+}
+
+.nav a.hamburger {
+   margin-left: 1rem;
+   grid-column-start: 1;
+   grid-column-end: 2;
 }
 
 .header h1 {
@@ -31,7 +63,7 @@ a {
     font-family: 'Permanent Marker', cursive;
     text-align: center;
     font-size: 3rem;
-    margin-top: 0;
+    margin-bottom: 0;
 }
 
 /*********************Images*****************/
@@ -43,7 +75,6 @@ a {
 #container {
     width: 100%;
     height: 1500px;
-    
     display: flex;
     flex-flow: wrap;
     align-content: flex-start;
@@ -52,10 +83,6 @@ a {
     justify-content: center;
 }
 
-#wrapper {
-    margin: auto;
-    width: 100%;
-}
 
 /******************Team Cards****************/
 
