--- a/finalproject/styles/allstarstyle.css
+++ b/finalproject/styles/allstarstyle.css
@@ -67,8 +67,9 @@ a {
 }
 
 .videos {
-    max-width: 75%;
-    margin-left: 15%;
+    max-width: 100%;
+    padding: .2rem;
+  
  
 }
 #container {
@@ -86,6 +87,7 @@ h3 {
     color: white;
     font-size: 1.75rem;
     text-align: center;
+    margin-bottom: .5rem;
 }
 
 .three {
