--- a/finalproject/styles/teamsstyle.css
+++ b/finalproject/styles/teamsstyle.css
@@ -104,6 +104,7 @@ a {
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
     position: absolute;
     border-radius: 10%;
 }
