--- a/finalproject/styles/teamsstyle.css
+++ b/finalproject/styles/teamsstyle.css
@@ -78,8 +78,6 @@ a {
     display: flex;
     flex-flow: wrap;
     align-content: flex-start;
-    align-items: center;
-    justify-items: center;
     justify-content: center;
 }
 
@@ -95,11 +93,12 @@ a {
     height: 250px;
     perspective: 1000px;
     margin: 1rem;
-    position: relative;
+    /* position: relative; */
     border-radius: 10%;
-    display: inline-flex;
+    /* display: inline-flex; */
    
 }
+
 
 .front, .back {
     width: 100%;
@@ -280,6 +279,7 @@ p {
 
 #searchList {
     width: 75%;
+    max-height: 25px;
     font-size: 1rem;
     padding: .5rem;
     margin: 2rem;
