--- a/finalproject/styles/allstarstyle.css
+++ b/finalproject/styles/allstarstyle.css
@@ -79,8 +79,7 @@ a {
     display: flex;
     flex-flow: wrap;
     align-content: flex-start;
-    align-items: center;
-    justify-items: center;
+  
     justify-content: center;
 }
 
@@ -95,4 +94,5 @@ h3 {
     border: 2px dashed #F28D0B;
     padding: .5rem;
     margin: 1rem;
+    max-height: 20%;
 }
